--- a/app/src/main/res/drawable/button_rounded.xml
+++ b/app/src/main/res/drawable/button_rounded.xml
@@ -6,8 +6,8 @@
 
             <corners android:radius="10dp"/> <!-- Радиус закругления углов -->
             <gradient
-                android:startColor="#53E88B"
-            android:endColor="#15BE77"
+                android:startColor="@color/white"
+            android:endColor="@color/white"
             android:angle="99" />         <!-- Угол градиента -->
             <corners android:radius="10dp" /> <!-- Радиус закругления углов -->
         </shape>
@@ -18,8 +18,8 @@
         <shape>
             <corners android:radius="15dp"/> <!-- Радиус закругления углов -->
             <gradient
-                android:startColor="#53E88B"
-            android:endColor="#15BE77"
+                android:startColor="@color/white"
+            android:endColor="@color/white"
             android:angle="99"/>
             <corners android:radius="10dp"/> <!-- Радиус закругления углов -->
         </shape>
