--- a/app/src/main/res/drawable/login_shape.xml
+++ b/app/src/main/res/drawable/login_shape.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFFFFF"></solid>
-    <corners android:radius="6dp"></corners>
-    <stroke android:width="2dp"
-        android:color="#F4F4F4"></stroke>
+    <solid android:color="@color/black"></solid>
+    <corners android:radius="15dp"></corners>
+    <stroke android:width="1dp"
+        android:color="@color/seriy"></stroke>
 </shape>
