--- a/app/src/main/res/layout/item_main_friends.xml
+++ b/app/src/main/res/layout/item_main_friends.xml
@@ -5,35 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="70dp">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/frendsItemAvatar"
-        android:layout_width="64dp"
-        android:layout_height="54dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="49dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="20dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/avatar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/frendsItemName"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.529"
+        app:riv_border_width="2dip"
+        app:riv_corner_radius="50dip"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/frendsItemName"
         android:layout_width="143dp"
         android:layout_height="31dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="48dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="TextView"
         android:textColor="@color/white"
         android:textSize="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/frendsItemCapital"
+        app:layout_constraintStart_toEndOf="@+id/frendsItemAvatar"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/frendsItemPlace"
         android:layout_width="60dp"
         android:layout_height="24dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="16dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="TextView"
         android:textColor="#7E848D"
