--- a/app/src/main/res/layout/item_rankings_region.xml
+++ b/app/src/main/res/layout/item_rankings_region.xml
@@ -18,7 +18,7 @@
 
         <TextView
             android:id="@+id/ItemRankingsRegiontextView"
-            android:layout_width="138dp"
+            android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:layout_weight="2"
             android:fontFamily="@font/poppins_semibold"
@@ -28,7 +28,6 @@
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.978"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.555" />
